# emb

ESP32_SDK_4.0/: ESP32_SDK_4.0.ino  helpers.h  main.h  string.c
ESP32_SDK_4.0/client/: IOTConnect.cpp  IOTConnect.h
ESP32_SDK_4.0/config/: IOT_config.h
IN_GIT_BKUP/speckpumps-firmware-rfc/: CMakeLists.txt  Makefile  README.md  cmd_storage_bin  installer_data.sh  pTable01  sdkconfig
IN_GIT_BKUP/speckpumps-firmware-rfc/binary_files/: binary_map.txt
IN_GIT_BKUP/speckpumps-firmware-rfc/main/: CMakeLists.txt  basicInit.c  basicInit.h  commondef.c  commondef.h  component.mk  fileOperations.c  fileOperations.h  i2c_peri.c  i2c_peri.h  interfacedef.h  main.c  modbus.c  modbus.h  mqtt.c  mqtt.h  mqtt_broker_cert  msg_processor.c  msg_processor.h  ota.c  ota.h  rtc_time.c  rtc_time.h  s3all.pem  version.h  wifiConnectivity.c  wifiConnectivity.h  wifiCustomStruct.h
IN_GIT_BKUP/speckpumps-firmware-rfc/spiffs_image/: crt  key
SE45_Project/: All_stepper.h  HTML.h  Read_me.txt  SE45_Project.ino  WiFiManager.h  project_config.h
SE45_Project/BAckUP/SE45_Project.zip_19FEB/SE45_Project/: All_stepper.h  Read_me.txt  SE45_Project.ino  WiFiManager.h  project_config.h
dev_Marster_EPS/ESP32_SDK/: ESP32_SDK.ino  IoTConnect.cpp  IoTConnect.h
dev_Master_nRF/: CODEOWNERS  README.md
dev_Master_nRF/nRF9160-DK/: CMakeLists.txt  Help.txt  Kconfig  prj.conf
dev_Master_nRF/nRF9160-DK/build_nrf9160_pca10090ns/: CMakeCache.txt  Kconfig.modules  zephyr_modules.txt
dev_Master_nRF/nRF9160-DK/src/: IoTConnect_Config.h  main.c  main.h
(+106 files in other folders)
